--- a/JWForm.csproj
+++ b/JWForm.csproj
@@ -16,6 +16,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="TiaIdentity" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
