Cadastrar novo usuário

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "db" : "Server=localhost;Database=local-relatorios;Trusted_Connection=True;"
+    "db" : "Server=localhost;Database=local-relatorios;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
