mudei o banco de dados para postgresql

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "db" : "Server=localhost;Database=local-relatorios;Trusted_Connection=True;TrustServerCertificate=True;"
+    "db" : "Host=localhost;Database=local-jwform;Username=postgres;Password=8318"
   },
   "Logging": {
     "LogLevel": {
