criei ambiente de produção

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "db" : "Host=ep-bitter-scene-164459-pooler.us-east-2.aws.neon.tech;Database=neondb;Username=DevAlexandreMuniz;Password=9oVGL6wjzJUf"
+    "db" : "Host=localhost;Database=local-jwform;Username=postgres;Password=8318"
     
   },
   "Logging": {
